[package]
name = "get_prices"
version = "0.1.0"
authors = ['Kylin <https://github.com/kylin-network>']
homepage = 'https://kylin.network'
edition = "2020"

[workspace]
members = [
]

[dependencies]
ink_primitives = { version = "3.0.0-rc1", default-features = false }
ink_metadata = { version = "3.0.0-rc1", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc1", default-features = false }
ink_storage = { version = "3.0.0-rc1", default-features = false }
ink_lang = { version = "3.0.0-rc1", default-features = false }
ink_prelude = { version = "3.0.0-rc1", default-features = false }


scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
scale-info = { version = "0.4", default-features = false, features = ["derive"], optional = true }
byteorder = { version = "1.3.2", default-features = false }
twox-hash = { version = "1.5.0", default-features = false }

[lib]
name = "get_prices"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
]
ink-as-dependency = []
