[package]
name = "get_prices"
version = "0.1.0"
authors = ['Kylin <https://github.com/kylin-network>']
homepage = 'https://kylin.network'
edition = "2018"

[workspace]
members = [
]

[dependencies]
ink_primitives = { git = "https://github.com/paritytech/ink", package = "ink_primitives", rev="1daf6a8e02a833067ee3eec905464a13a81b1cab", default-features = false }
ink_metadata = { git = "https://github.com/paritytech/ink", package = "ink_metadata", rev="1daf6a8e02a833067ee3eec905464a13a81b1cab", default-features = false, features = ["derive"], optional = true }
ink_env = { git = "https://github.com/paritytech/ink", package = "ink_env", rev="1daf6a8e02a833067ee3eec905464a13a81b1cab", default-features = false }
ink_storage = { git = "https://github.com/paritytech/ink", package = "ink_storage", rev="1daf6a8e02a833067ee3eec905464a13a81b1cab", default-features = false }
ink_lang = { git = "https://github.com/paritytech/ink", package = "ink_lang", rev="1daf6a8e02a833067ee3eec905464a13a81b1cab", default-features = false }
ink_prelude = { git = "https://github.com/paritytech/ink", package = "ink_prelude", rev="1daf6a8e02a833067ee3eec905464a13a81b1cab", default-features = false }


scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
scale-info = { version = "0.4", default-features = false, features = ["derive"], optional = true }

[lib]
name = "get_prices"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
]
ink-as-dependency = []
